Added the score counting

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -14,9 +14,14 @@
 		<h1>Snakes</h1>
 	</header>
 
-	<canvas id="game" width="400" height="400"></canvas>
+	<aside class="left">
+		<div class="gameOver">
+			<div class="inner">Game over, your score is <span class="finalScore"></score></div>
+		</div>
+		<canvas id="game" width="400" height="400"></canvas>
+	</aside>
 
-	<aside>
+	<aside class="right">
 		<div class="score">0</div>
 	</aside>
 </section>
