Added the restart button

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -16,7 +16,12 @@
 
 	<aside class="left">
 		<div class="gameOver">
-			<div class="inner">Game over, your score is <span class="finalScore"></score></div>
+			<div class="inner">
+				Game over, your score is <span class="finalScore"></span>
+				<div class="restart">
+					<a href="javascript:;"><span><span>Restart</a>
+				</div>
+			</div>
 		</div>
 		<canvas id="game" width="400" height="400"></canvas>
 	</aside>
