Make it ready to be published

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -1,4 +1,4 @@
-#{extends 'main.html' /}
+#{extends 'snakes-main.html' /}
 #{set title:'Home' /}
 
 #{set 'moreScripts'}
@@ -29,4 +29,8 @@
 	<aside class="right">
 		<div class="score">0</div>
 	</aside>
+
+	<div class="credits">
+		This game was made to try CoffeeScript. Have a look at the <a href="https://github.com/sylvainmathieu/Snakes/blob/c7acfdfb05f4b8e7425a8180b25282e1752b8b32/public/javascripts/game.coffee">source code</a>.
+	</div>
 </section>
