--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -89,6 +89,20 @@ body {
 			border: 3px solid @background + #333333;
 		}
 	}
+
+	.credits {
+		text-align: center;
+		font-size: 0.8em;
+		color: rgba(255,255,255,0.5);
+		clear: both;
+		padding: 20px 0;
+		a {
+			color: white;
+			&:hover {
+				text-decoration: none
+			}
+		}
+	}
 }
 
 #game {
