--- a/app/views/SnakeGame/index.html
+++ b/app/views/SnakeGame/index.html
@@ -1,11 +1,13 @@
-#{extends 'SnakeGame/main.html' /}
+#{extends 'main.html' /}
 #{set title:'Home' /}
 
 #{set 'moreScripts'}
+<script src="@{'/public/javascripts/jquery-1.5.2.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 <script src="@{'/public/javascripts/snake-game/game.coffee'}" type="text/javascript" charset="${_response_encoding}"></script>
 #{/set}
 
 #{set 'moreStyles'}
+<link rel="stylesheet" media="screen" href="@{'/public/stylesheets/snake-game/main.less'}">
 <link href='http://fonts.googleapis.com/css?family=Gruppo' rel='stylesheet' type='text/css'>
 #{/set}
 
